@@ -44,6 +44,7 @@ CFLAGS += -DIPTABLES_VERSION=\"$(IPTABLES_VERSION)\"
 CFLAGS += -Os -std=gnu99
 CFLAGS += -Wall -Wunused
 CFLAGS += -mips32r2 -mtune=24kec
+CFLAGS += -DDISABLE_INSMOD
 
 ifdef NO_SHARED_LIBS
 CFLAGS += -DNO_SHARED_LIBS=1
